@@ -414,7 +414,7 @@ void Application::showSvgExportDialog()
 void Application::showLayoutOptimizationDialog()
 {
     LayoutOptimizer layoutOptimizer { m_mediator->mindMapData(), m_editorView->grid() };
-    LayoutOptimizationDialog dialog { *m_mainWindow, layoutOptimizer };
+    LayoutOptimizationDialog dialog { *m_mainWindow, *m_mediator->mindMapData(), layoutOptimizer };
     connect(&dialog, &LayoutOptimizationDialog::undoPointRequested, m_mediator.get(), &Mediator::saveUndoPoint);
 
     if (dialog.exec() == QDialog::Accepted) {
